# FGS-Sim

./: .Gauss2d.hpp.swp  .README.md.swp  .Test.cpp.swp  .gitconfig  .gitignore  .~lock.Results.ods#  CHANGELOG-Summer.md  CMakeCache.txt  CMakeLists.txt  GaussWithNoise.cpp  NormalDist  NormalDist.cpp  README.md  Results.ods  centroids1.csv  changelog.md  doxygen.conf  gaussian  gaussian.cpp  results.csv  workspace.code-workspace
centroid-v2/: .Gauss2d.cpp.swp  .Gauss2d.hpp.swp  .Main.cpp.swp  .MonteCarlo.cpp.swp  .MonteCarlo.hpp.swp  .Test.cpp.swp  .Test.hpp.swp  .~lock.results.csv#  Gauss2d  Gauss2d.cpp  Gauss2d.hpp  Main  Main.cpp  MonteCarlo.cpp  MonteCarlo.hpp  Test.cpp  Test.hpp  changelog.txt  dominantError.csv  parameters.csv  results.csv
centroid-v3/: 2.fit  Brownian.cpp  Brownian.hpp  Frame.cpp  Frame.hpp  FrameProcessor.cpp  FrameProcessor.hpp  Gauss2d.cpp  Gauss2d.hpp  Grid.hpp  Main  Main.cpp  MonteCarlo.cpp  MonteCarlo.hpp  PSF.cpp  PSF.hpp  Read  Read.cpp  Test.cpp  Test.hpp  catch_test_2.cpp  frame.csv  frame.fit  results.csv  saveToFit.py  typedefs.h  unitTest.cpp
centroid-v3/Config/: config.cpp  config.h  const_parameters.h  parameters.h  telescopes.hpp  twinkle_parameters.h
data/: CHANGELOG-Summer.md  PSF-H-32.tsv  frame.csv
data/Zemax/: Field1.tsv  Field10.tsv  Field17.txt  Field3.txt
doc/html/: _brownian_8cpp.html  _brownian_8cpp__incl.dot  _brownian_8cpp__incl.md5  _brownian_8hpp.html  _brownian_8hpp__dep__incl.dot  _brownian_8hpp__dep__incl.md5  _brownian_8hpp_source.html  _gauss2d_8cpp.html  _gauss2d_8cpp__incl.dot  _gauss2d_8cpp__incl.md5  _gauss2d_8hpp.html  _gauss2d_8hpp__dep__incl.dot  _gauss2d_8hpp__dep__incl.md5  _gauss2d_8hpp__incl.dot  _gauss2d_8hpp__incl.md5  _gauss2d_8hpp_source.html  _main_8cpp.html  _main_8cpp.js  _main_8cpp__incl.dot  _main_8cpp__incl.md5  _monte_carlo_8cpp.html  _monte_carlo_8cpp__incl.dot  _monte_carlo_8cpp__incl.md5  _monte_carlo_8hpp.html  _monte_carlo_8hpp__dep__incl.dot  _monte_carlo_8hpp__dep__incl.md5  _monte_carlo_8hpp__incl.dot  _monte_carlo_8hpp__incl.md5  _monte_carlo_8hpp_source.html  _p_s_f_8cpp.html  _p_s_f_8cpp__incl.dot  _p_s_f_8cpp__incl.md5  _p_s_f_8hpp.html  _p_s_f_8hpp__dep__incl.dot  _p_s_f_8hpp__dep__incl.md5  _p_s_f_8hpp__incl.dot  _p_s_f_8hpp__incl.md5  _p_s_f_8hpp_source.html  _test_8cpp.html  _test_8cpp__incl.dot  (+43 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js
include/: c14_parameters.h  telescopes.hpp  twentycm_parameters.h
older/: GaussWithNoise  GaussWithNoise.cpp  Makefile  NormalDist  NormalDist.cpp  results.csv
spike/: CMakeLists.txt  catch_test.cpp  catch_test_2.cpp  saveToFit.py
spike/older/: helloWorld.cpp  results2.csv
src/: Brownian.cpp  Brownian.hpp  Frame.cpp  Frame.hpp  FrameProcessor.cpp  FrameProcessor.hpp  Grid.hpp  Main.cpp  MonteCarlo.cpp  MonteCarlo.hpp  PSF.hpp  Test.cpp  Test.hpp  astroUtilities.cpp  astroUtilities.hpp  frame.csv  parameters.h  telescopes.h  telescopes.hpp  test_latexExample.cpp  typedefs.h  unitTest.cpp
src/Config/: telescopes.hpp  test.json
test/: FrameProcessor_tester.cpp  Frame_tester.cpp
